@@ -52,8 +52,8 @@ description of the <TT>fl_</TT> functions, see
 <A HREF="Fl_Menu_Button.html">Fl_Menu_Button</A><BR>
 <A HREF="Fl_Menu_.html">Fl_Menu_</A><BR>
 <A HREF="Fl_Menu_Item.html">Fl_Menu_Item</A><BR>
-</TD><TD>
 <A HREF="Fl_Menu_Window.html">Fl_Menu_Window</A><BR>
+</TD><TD>
 <A HREF="Fl_Multi_Browser.html">Fl_Multi_Browser</A><BR>
 <A HREF="Fl_Multiline_Input.html">Fl_Multiline_Input</A><BR>
 <A HREF="Fl_Multiline_Output.html">Fl_Multiline_Output</A><BR>
